tests/wordpress/fail/plugins/scormcloud/scormcloud.php
<?php 
	/*
	Plugin Name: SCORM Cloud For WordPress
	Plugin URI: http://scorm.com/wordpress
	Description: Tap the power of SCORM to deliver and track training right from your WordPress-powered site. Just add the SCORM Cloud widget to the sidebar or use the SCORM Cloud button to add a link directly in a post or page.
	Author: Rustici Software
	Version: 1.0.6.6
	Author URI: http://www.scorm.com
	*/
